Cleanup lifecycle transitions Fix mod ordering for multi-mod jars Make dependency resolution issues easier to debug/diagnose