@@ -5,31 +5,25 @@
 
 package net.minecraftforge.fml.loading;
 
-import cpw.mods.modlauncher.api.LamdbaExceptionUtils;
 import net.minecraftforge.fml.loading.moddiscovery.BackgroundScanHandler;
 import net.minecraftforge.fml.loading.moddiscovery.ModFile;
 import net.minecraftforge.fml.loading.moddiscovery.ModFileInfo;
 import net.minecraftforge.fml.loading.moddiscovery.ModInfo;
 import net.minecraftforge.forgespi.locating.IModFile;
 
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Enumeration;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
 /**
  * Master list of all mods <em>in the loading context. This class cannot refer outside the
  * loading package</em>
  */
-public class LoadingModList
-{
+public class LoadingModList {
     private static LoadingModList INSTANCE;
     private final List<ModFileInfo> modFiles;
     private final List<ModInfo> sortedList;
@@ -37,15 +31,14 @@ public class LoadingModList
     private final List<EarlyLoadingException> preLoadErrors;
     private List<IModFile> brokenFiles;
 
-    private LoadingModList(final List<ModFile> modFiles, final List<ModInfo> sortedList)
-    {
+    private LoadingModList(final List<ModFile> modFiles, final List<ModInfo> sortedList) {
         this.modFiles = modFiles.stream()
                 .map(ModFile::getModFileInfo)
                 .map(ModFileInfo.class::cast)
-                .collect(Collectors.toList());
+                .toList();
         this.sortedList = sortedList.stream()
                 .map(ModInfo.class::cast)
-                .collect(Collectors.toList());
+                .toList();
         this.fileById = this.modFiles.stream()
                 .map(ModFileInfo::getMods)
                 .flatMap(Collection::stream)
@@ -54,21 +47,18 @@ public class LoadingModList
         this.preLoadErrors = new ArrayList<>();
     }
 
-    public static LoadingModList of(List<ModFile> modFiles, List<ModInfo> sortedList, final EarlyLoadingException earlyLoadingException)
-    {
+    public static LoadingModList of(List<ModFile> modFiles, List<ModInfo> sortedList, final EarlyLoadingException earlyLoadingException) {
         INSTANCE = new LoadingModList(modFiles, sortedList);
         if (earlyLoadingException != null)
-        {
             INSTANCE.preLoadErrors.add(earlyLoadingException);
-        }
         return INSTANCE;
     }
 
     public static LoadingModList get() {
         return INSTANCE;
     }
-    public void addCoreMods()
-    {
+
+    public void addCoreMods() {
         modFiles.stream()
                 .map(ModFileInfo::getFile)
                 .map(ModFile::getCoreMods)
@@ -76,8 +66,7 @@ public class LoadingModList
                 .forEach(FMLLoader.getCoreModProvider()::addCoreMod);
     }
 
-    public void addAccessTransformers()
-    {
+    public void addAccessTransformers() {
         for (ModFileInfo modFile : modFiles) {
             ModFile mod = modFile.getFile();
             var at = mod.getAccessTransformer().orElse(null);
@@ -87,21 +76,18 @@ public class LoadingModList
         }
     }
 
-    public void addForScanning(BackgroundScanHandler backgroundScanHandler)
-    {
+    public void addForScanning(BackgroundScanHandler backgroundScanHandler) {
         backgroundScanHandler.setLoadingModList(this);
         modFiles.stream()
                 .map(ModFileInfo::getFile)
                 .forEach(backgroundScanHandler::submitForScanning);
     }
 
-    public List<ModFileInfo> getModFiles()
-    {
+    public List<ModFileInfo> getModFiles() {
         return modFiles;
     }
 
-    public Path findResource(final String className)
-    {
+    public Path findResource(final String className) {
         for (ModFileInfo mf : modFiles) {
             final Path resource = mf.getFile().findResource(className);
             if (Files.exists(resource)) return resource;
@@ -109,55 +95,11 @@ public class LoadingModList
         return null;
     }
 
-    public Enumeration<URL> findAllURLsForResource(final String resName) {
-        final String resourceName;
-        // strip a leading slash
-        if (resName.startsWith("/")) {
-            resourceName = resName.substring(1);
-        } else {
-            resourceName = resName;
-        }
-        return new Enumeration<URL>() {
-            private final Iterator<ModFileInfo> modFileIterator = modFiles.iterator();
-            private URL next;
-            @Override
-            public boolean hasMoreElements() {
-                if (next!=null) return true;
-                next = findNextURL();
-                return next != null;
-            }
-
-            @Override
-            public URL nextElement() {
-                if (next == null) {
-                    next = findNextURL();
-                    if (next == null) throw new NoSuchElementException();
-                }
-                URL result = next;
-                next = null;
-                return result;
-            }
-
-            private URL findNextURL() {
-                while (modFileIterator.hasNext()) {
-                    final ModFileInfo next = modFileIterator.next();
-                    final Path resource = next.getFile().findResource(resourceName);
-                    if (Files.exists(resource)) {
-                        return LamdbaExceptionUtils.uncheck(()->new URL("modjar://" + next.getMods().get(0).getModId() + "/" + resourceName));
-                    }
-                }
-                return null;
-            }
-        };
-    }
-
-    public ModFileInfo getModFileById(String modid)
-    {
+    public ModFileInfo getModFileById(String modid) {
         return this.fileById.get(modid);
     }
 
-    public List<ModInfo> getMods()
-    {
+    public List<ModInfo> getMods() {
         return this.sortedList;
     }
 
